force-app/main/default/objects/Chatbot_Lead__c/Chatbot_Lead__c.object-meta.xml
<CustomObject>
    <label>Chatbot Lead</label>
    <nameField>
        <displayFormat>CLN-{0000}</displayFormat>
        <label>Chatbot Lead Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatbot Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>