force-app/main/default/objects/Chatbot_Lead__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipLabel>Chatbot Leads</relationshipLabel>
    <relationshipName>Chatbot_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>