force-app/main/default/objects/Chatbot_Lead__c/fields/Converted_del__c.field-meta.xml
<CustomField>
    <fullName>Converted_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>