force-app/main/default/objects/Chatbot_Lead__c/fields/Lead_Mode__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Mode</label>
    <referenceTo>Lead_Mode__c</referenceTo>
    <relationshipLabel>Chatbot Leads</relationshipLabel>
    <relationshipName>Chatbot_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>