force-app/main/default/objects/Chatbot_Lead__c/fields/Lead_Source1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead_Source__c.Lead_Mode__c</field>
            <operation>equals</operation>
            <valueField>$Source.Lead_Mode__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead_Source__c</referenceTo>
    <relationshipLabel>Chatbot Leads</relationshipLabel>
    <relationshipName>Chatbot_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>