force-app/main/default/objects/Chatbot_Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source Pi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Justdial</fullName>
            </value>
            <value>
                <fullName>Sulekha</fullName>
            </value>
            <value>
                <fullName>Urbanpro</fullName>
            </value>
            <value>
                <fullName>Shiksha</fullName>
            </value>
            <value>
                <fullName>Studysid</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Website queries</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Seminars</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Tollfree</fullName>
            </value>
            <value>
                <fullName>Email Enquiry</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Test Series Online</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>