force-app/main/default/objects/Chatbot_Lead__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Chatbot Leads</relationshipLabel>
    <relationshipName>Chatbot_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>