force-app/main/default/objects/Chatbot_Lead__c/recordTypes/ReadOnlyChatbot.recordType-meta.xml
<RecordType>
    <fullName>ReadOnlyChatbot</fullName>
    <active>true</active>
    <label>ReadOnlyChatbot</label>
</RecordType>