force-app/main/default/objects/Chatbot_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Status__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Centre__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>